@@ -1,3 +1,9 @@
+2003-11-30  Paul Brook  <paul@nowt.org>
+
+	* f95-lang.c (gfc_post_options): Move ...
+	* options.c (gfc_post_options): .. to here.  Handle inlining options.
+	* gfortran.h (gfc_post_options): Add prototype.
+
 2003-11-28  Richard Henderson  <rth@redhat.com>
 
 	* trans.c (gfc_create_var_np): Use create_tmp_var_raw.
